--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,23 @@
 {
-    "num_messages": 2,
-    "num_senders": 1,
+    "num_messages": 1000,
+    "num_senders": 5,
     "sender_settings": [
         {
-            "mean_delay": 0.5,
+            "mean_delay": 0.1,
             "fail_rate": 0.1
+        },
+        {
+            "mean_delay": 0.8,
+            "fail_rate": 0.02
+        },
+        {
+            "mean_delay": 0.3,
+            "fail_rate": 0.1
+        },
+        {
+            "mean_delay": 2,
+            "fail_rate": 0
         }
     ],
-    "monitor_update_interval": 1.12
+    "monitor_update_interval": 5
 }
